--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
 body {
-  background-color: salmon;
-  color: white;
+  background-color: white;
+  color: black;
   padding: 0%;
   margin: 0%;
+}
+
+h2 {
+  color: blue;
+  text-transform: uppercase;
+}
+
+.cv-header {
+  padding: 100px;
+  margin: 100px;
+  background-color: red;
+  border: 4px solid black;
+}
+
+.cv-header:hover {
+  background-color: aqua;
+}
+
+.header {
+  background-color: red;
 }
