--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
-  background-color: salmon;
-  color: white;
-  padding: 0%;
-  margin: 0%;
+  background-color:white;
+  color: black;
+  padding: 5%;
+  margin: 5%;
+  border: 10px double black;
+}
+header {
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 20px;
 }
